fixed the scrollbar height styling

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -9,16 +9,17 @@
     display: flex;
     align-items: center;
     text-align: center;
-    padding-top: .5vw;
+    padding-top: .5vh;
+    height: 2em;
 }
 
 .container {
     margin-left: 1.5vw;
+    height: 100%;
 }
 
 .gov-container-scrollport {
-    height: inherit;
-    min-height: 60em;
+    height: calc(100vh - .5vh - 2em);
     width: 100%
 }
 
